<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.jitsi</groupId>
    <artifactId>jitsi-meet-torture</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>jitsi-meet-torture</name>
    <url>https://github.com/jitsi/jitsi-meet-torture</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <organization>Jitsi</organization>
            <email>dev@jitsi.org</email>
            <url>https://jitsi.org</url>
        </developer>
    </developers>

    <dependencies>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.8.1</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>23.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-chrome-driver -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-chrome-driver</artifactId>
            <version>3.8.1</version>
        </dependency>

        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>2.1.0</version>
        </dependency>

        <dependency>
            <groupId>io.appium</groupId>
            <artifactId>java-client</artifactId>
            <version>5.0.4</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.13.1</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>

        <dependency>
            <groupId>org.uncommons</groupId>
            <artifactId>reportng</artifactId>
            <version>1.1.2</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.testng</groupId>
                    <artifactId>testng</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>3.0</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <!-- Here we list all properties that we currently support in both
        mobile and desktop settings file. Having empty values we guarantee that
        we will use the values supplied from command line and all missing will
        be empty.
        We can add default values here. -->
    <properties>
        <!-- desktop -->
        <threadcount>1</threadcount>
        <!-- not used at the moment -->

        <!-- mobile -->
        <mobile.participant/>
        <mobile.caps.deviceName/>
        <mobile.caps.app/>

        <test.report.directory>target/surefire-reports</test.report.directory>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- Defines two profiles mobile and desktop.
        Using the appropriate setting.properties and testng.xml files.
        Enables filtering so we can fill up the settings.properties files
        using the command line supplied values
     -->
    <profiles>
        <profile>
            <id>mobile</id>
            <activation>
                <property>
                    <name>target</name>
                    <value>mobile</value>
                </property>
            </activation>
            <properties>
                <suite.xml>src/test/resources/mobile/testng.xml</suite.xml>
            </properties>
            <build>
                <testResources>
                    <testResource>
                        <directory>src/test/resources/mobile</directory>
                        <includes>
                            <include>testng.xml</include>
                            <include>settings.properties</include>
                        </includes>
                        <filtering>true</filtering>
                    </testResource>
                </testResources>
            </build>
        </profile>
        <profile>
            <id>desktop</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <property>
                    <name>target</name>
                    <value>desktop</value>
                </property>
            </activation>
            <properties>
                <suite.xml>src/test/resources/desktop/testng.xml</suite.xml>
            </properties>
            <build>
                <testResources>
                    <testResource>
                        <directory>src/test/resources/desktop</directory>
                        <includes>
                            <include>testng.xml</include>
                            <include>settings.properties</include>
                        </includes>
                        <filtering>true</filtering>
                    </testResource>
                </testResources>
            </build>
        </profile>
    </profiles>

    <build>
        <!-- exclude everything, every profile will include the needed files -->
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <excludes>
                    <exclude>**/*</exclude>
                </excludes>
            </testResource>
        </testResources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.20</version>
                <configuration>
                    <reportsDirectory>${test.report.directory}</reportsDirectory>
                    <suiteXmlFiles>
                        <suiteXmlFile>${suite.xml}</suiteXmlFile>
                    </suiteXmlFiles>
                    <properties>
                        <property>
                            <name>configfailurepolicy</name>
                            <value>continue</value>
                        </property>
                        <property>
                            <name>parallel</name>
                            <value>tests</value>
                        </property>
                        <property>
                            <name>threadcount</name>
                            <value>${threadcount}</value>
                        </property>
                        <property>
                            <name>usedefaultlisteners</name>
                            <value>false</value>
                        </property>
                        <property>
                            <name>listener</name>
                            <value>org.uncommons.reportng.HTMLReporter, org.uncommons.reportng.JUnitXMLReporter</value>
                        </property>
                    </properties>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.10</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/dependency-jars/</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.5.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <finalName>zip-with-dependencies</finalName>
                            <appendAssemblyId>false</appendAssemblyId>
                            <descriptors>
                                <descriptor>src/main/assembly/zip.xml</descriptor>
                            </descriptors>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>
